<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/layout_bg_two"
            android:paddingBottom="32dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_bg_two"
                android:fontFamily="@font/yekan"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="10dp"
                android:text="@string/center_info"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="spread" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/center_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/center_name_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintWidth_default="spread">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_center_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yekan"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/IP_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/IP_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/center_name_container"
                app:layout_constraintWidth_default="spread">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_IP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yekan"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textDirection="ltr"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/port_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/port_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/IP_container"
                app:layout_constraintWidth_default="spread">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yekan"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textDirection="ltr"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/yekan"
            android:text="@string/save_btn_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="true"
            app:layout_constraintStart_toEndOf="@id/btn_close"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/yekan"
            android:text="@string/close_btn_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintHeight="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>