<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_dialog_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/layout_bg_one"
        android:padding="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/layout_bg_two"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/text_view_bg_one"
                android:fontFamily="@font/yekan"
                android:padding="16dp"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_default="spread" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/username_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/yekan"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_container"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/dim_gray"
                app:boxStrokeColor="@color/dim_gray"
                app:hintTextColor="@color/dim_gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/user_name_container">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawableTint="@color/black"
                    android:fontFamily="@font/yekan"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/custom_cursor"
                    android:textDirection="ltr" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_server_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="64dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="16dp"
                android:fontFamily="@font/yekan"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_container"
                app:ms_arrow_tint="@color/black"
                app:ms_background_color="@color/gray"
                app:ms_padding_right="16dp" />

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:src="@drawable/ic_more_horizontal"
                app:layout_constraintBottom_toBottomOf="@id/spinner_server_data"
                app:layout_constraintEnd_toStartOf="@id/spinner_server_data"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinner_server_data"
                app:tint="@color/black" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/sip_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_server_data" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/yekan"
            android:text="@string/login_btn_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:backgroundTint="@color/gray"
            app:layout_constraintBottom_toBottomOf="@id/layout_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_dialog"
            app:layout_constraintWidth_default="spread" />

        <ProgressBar
            android:id="@+id/progress_bar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>